# lapse_video

./: .gitmodules  Makefile  README.md  lapse.gyp  run_djinni.sh
android/lapse/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/lapse/app/src/androidTest/java/fun/dyno/lapse/: ExampleInstrumentedTest.java
android/lapse/app/src/main/: AndroidManifest.xml
android/lapse/app/src/main/cpp/: native-lib.cpp
android/lapse/app/src/main/java/fun/dyno/lapse/: CaptureActivity.java
android/lapse/app/src/main/res/layout/: activity_capture.xml
android/lapse/app/src/main/res/values/: strings.xml
android/lapse/app/src/test/java/fun/dyno/lapse/: ExampleUnitTest.java
build_mac/lapse.xcodeproj/: project.pbxproj
data/: language.json  user.json
data/picture/: app_ico.psd
djinni/: lapse.djinni
generated-src/cpp/: capture_quick_mode.cpp  capture_quick_mode.hpp  config_key_value.cpp  config_key_value.hpp  const_define.cpp  const_define.hpp  data_gen.hpp  interval_mode.hpp  lapse_event.hpp  lapse_setting_dlg_delegate.hpp  lapse_setting_dlg_gen.hpp  lapse_setting_gen.hpp  lapse_setting_ui_gen.hpp  lapse_ui_scene.hpp  logic_gen.hpp  moive_info_gen.hpp  moive_info_manager_gen.hpp  project_cell_gen.hpp  project_list_gen.hpp  publish_channel.hpp  quick_mode_gen.hpp  uilogic_gen.hpp  video_info.hpp
generated-src/jni/: NativeCaptureQuickMode.cpp  NativeCaptureQuickMode.hpp  NativeConfigKeyValue.cpp  NativeConfigKeyValue.hpp  NativeConstDefine.cpp  NativeConstDefine.hpp  NativeDataGen.cpp  NativeDataGen.hpp  NativeIntervalMode.hpp  NativeLapseEvent.hpp  NativeLapseSettingDlgDelegate.cpp  NativeLapseSettingDlgDelegate.hpp  NativeLapseSettingDlgGen.cpp  NativeLapseSettingDlgGen.hpp  NativeLapseSettingGen.cpp  NativeLapseSettingGen.hpp  NativeLapseSettingUiGen.cpp  NativeLapseSettingUiGen.hpp  NativeLapseUiScene.hpp  NativeLogicGen.cpp  NativeLogicGen.hpp  NativeMoiveInfoGen.cpp  NativeMoiveInfoGen.hpp  NativeMoiveInfoManagerGen.cpp  NativeMoiveInfoManagerGen.hpp  NativeProjectCellGen.cpp  NativeProjectCellGen.hpp  NativeProjectListGen.cpp  NativeProjectListGen.hpp  NativePublishChannel.hpp  NativeQuickModeGen.cpp  NativeQuickModeGen.hpp  NativeUilogicGen.cpp  NativeUilogicGen.hpp  NativeVideoInfo.cpp  NativeVideoInfo.hpp
generated-src/objc/: LPACaptureQuickMode+Private.h  LPACaptureQuickMode+Private.mm  LPACaptureQuickMode.h  LPACaptureQuickMode.mm  LPAConfigKeyValue+Private.h  LPAConfigKeyValue+Private.mm  LPAConfigKeyValue.h  LPAConfigKeyValue.mm  LPAConstDefine+Private.h  LPAConstDefine+Private.mm  LPAConstDefine.h  LPAConstDefine.mm  LPADataGen+Private.h  LPADataGen+Private.mm  LPADataGen.h  LPAIntervalMode.h  LPALapseEvent.h  LPALapseSettingDlgDelegate+Private.h  LPALapseSettingDlgDelegate+Private.mm  LPALapseSettingDlgDelegate.h  LPALapseSettingDlgGen+Private.h  LPALapseSettingDlgGen+Private.mm  LPALapseSettingDlgGen.h  LPALapseSettingGen+Private.h  LPALapseSettingGen+Private.mm  LPALapseSettingGen.h  LPALapseSettingUiGen+Private.h  LPALapseSettingUiGen+Private.mm  LPALapseSettingUiGen.h  LPALapseUiScene.h  LPALogicGen+Private.h  LPALogicGen+Private.mm  LPALogicGen.h  LPAMoiveInfoGen+Private.h  LPAMoiveInfoGen+Private.mm  LPAMoiveInfoGen.h  LPAMoiveInfoManagerGen+Private.h  LPAMoiveInfoManagerGen+Private.mm  LPAMoiveInfoManagerGen.h  LPAProjectCellGen+Private.h  (+16 more)
ios/: Podfile
ios/lapse/: AppDelegate.swift  GalleryTabBarController.swift  Info.plist  LapseSetterView.swift  LapseSetterView.xib  LapseSettingViewController.swift  LogicTaskExcuser.swift  MoreCameraSetterView.swift  MoreCameraSetterView.xib  PicturePreviewViewController.swift  PopbaseUIVViewController.swift  PorjectCell.swift  ProjectSettingView.swift  ProjectsViewController.swift  PublishView.swift  PublishView.xib  ResolutionSetterView.swift  ResolutionSetterView.xib  ReviewViewController.swift  ViewController.swift  justfor_cpplink.cpp  lapse_app-Bridging-Header.h  project_setting_view.xib  video_frame_imp.swift
ios/lapseTests/: lapseTests.swift
ios/lapseUITests/: lapseUITests.swift
ios/lapse_app.xcodeproj/: project.pbxproj
ios/lapse_app.xcworkspace/: contents.xcworkspacedata
src/cpp/: data_imp.cpp  data_imp.hpp  lapse_setting_dlg_imp.cpp  lapse_setting_dlg_imp.hpp  lapse_setting_imp.cpp  lapse_setting_imp.hpp  logic_imp.cpp  logic_imp.hpp  (+12 more)
(+70 files in other folders)
